5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1716_2495.log
== TEST (2019-05-07 17:36:18) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:36:21) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:42:49) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:42:57) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:42:58) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:43:15) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.145678
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
PAR
PAR
PAR
PAR
PAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
PAR
PAR
PAR
PAR
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:43:39) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:34:52) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1):
		num % 2 = 0
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    num % 2 = 0
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:35:09) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:36:34) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 ):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 02:37:10) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 ):
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.139008
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
IMPAR
IMPAR
IMPAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
PAR
PAR
PAR
PAR
PAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
IMPAR
PAR
PAR
PAR
IMPAR
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 02:38:16) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
	num % 2
	mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.203387
-- ERROR:
  File "/home/codebench/codes/1716/2495/main.py", line 12
    num % 2
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:38:31) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
	num % 2
	mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    num % 2
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 02:38:31) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
	num % 2
	mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.189777
-- ERROR:
  File "/home/codebench/codes/1716/2495/main.py", line 12
    num % 2
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:38:31) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
	num % 2
	mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    num % 2
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:38:33) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
	num % 2
	mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    num % 2
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:38:34) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
	num % 2
	mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    num % 2
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:38:47) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 02:38:47) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
		num % 2
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 15:59:55) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if (num != -1 ):
		num % 2 == 0
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:00:49) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:00:52) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:00:55) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:01:06) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.108328
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:01:45) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:17:34) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:17:38) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:24:47) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:34:38) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:34:52) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:34:57) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:35:06) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:35:19) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	num = int(input("Digite um numero: "))

	# Verifica se valor eh divisivel por 2
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	
-- OUTPUT:
PAR
PAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:35:39) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	
-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:36:07) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	
-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:36:23) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	
-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:37:01) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:37:12) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:37:38) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))

	
-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:37:50) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:38:05) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:38:17) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repetica
while (num != -1 ):
	
	if ((num % 2) == 0 ):
		
		mensagem = "PAR"
		
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
